--- a/i18n/default.properties
+++ b/i18n/default.properties
@@ -10,3 +10,5 @@ theme.related_posts=\u76f8\u5173\u6587\u7ae0
 theme.page = \u7bc7
 theme.404 = \u9875\u9762\u4e0d\u5b58\u5728
 theme.comment = \u8bc4\u8bba
+theme.overview = \u603b\u89c8
+theme.item = \u9879
