--- a/i18n/en.properties
+++ b/i18n/en.properties
@@ -10,3 +10,5 @@ theme.related_posts=RELATED ARTICLES
 theme.page = PAGE
 theme.404 = This page does not exist
 theme.comment = Comment
+theme.overview = OVERVIEW
+theme.item = ITEM
